k8s/networking/nginx-service.yml
apiVersion: v1
kind: Service

metadata:
  name: nginx-service
  namespace: infraready

spec:
  selector:
    app: nginx

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
