k8s/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: infraready-ingress
  namespace: infraready

spec:
  rules:
  - host: infraready.test

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: flask-service

            port:
              number: 80
